# localbooru

./: Cargo.toml  LICENSE  README.md  angular.json  karma.conf.js  package-lock.json  package.json
src/: db.rs  image_utils.rs  index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/models/: search.rs  search_result.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/components/header/: header.component.html  header.component.ts
src/components/main/: main.component.html  main.component.ts
src/components/tags/: tags.component.html  tags.component.ts
src/models/: SearchResult.ts  Tag.ts  mod.rs
src/services/: search-results.service.ts  tags.service.ts
