[package]
name = "localbooru"
version = "0.1.0"
description = "something"
authors = ["you"]
license = ""
repository = ""
default-run = "localbooru"
edition = "2018"


[dependencies]
bson="^2.1.0"
serde = { version = "1.0", features = ["derive"] }
image = "^0.23.14"
img_hash = "^3.2.0"
anyhow="^1.0.47"
walkdir = "^2.3.2"
rust-crypto = "^0.2.36"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.4"
rayon = "1.5.1"

[profile.dev]
opt-level=3
incremental=true
