[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
image = "^0.23.14"
img_hash = "^3.2.0"
sqlx = {version="^0.5.9", features= ['runtime-tokio-rustls', "sqlite"] }
tokio = {version="^1.12.0", features= ["fs"] }
anyhow="^1.0.47"
walkdir = "^2.3.2"
async-channel = "^1.6.1"
futures = "0.3.17"
rust-crypto = "^0.2.36"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]


[profile.dev]
opt-level=3
incremental=true
